--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Pružná mezera">
 <!ENTITY Ctr_space			"Mezera">
 <!ENTITY Ctr_separator		"Oddělovač">
-<!ENTITY Ctr_puibseparator	"PanelUI oddělovač tlačítek">
 <!ENTITY Ctr_navthrobber	"Indikátor činnosti">
 <!ENTITY Ctr_sidebarbutton	"Postranní lišta">
 <!ENTITY Ctr_windowcontrols	"Min/max/zavřít (Fullscreen)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Obecné UI">
 <!ENTITY Ctr_nbiconsize0	"Nastavení lišty navigace:">
 <!ENTITY Ctr_smallnavbut	"Malá tlačítka na liště navigace">
-<!ENTITY Ctr_bfurlbarfix	"Upravit okraje adresního řádku">
 <!ENTITY Ctr_backforward	"Přesunutelná tlačítka zpět-vpřed">
 <!ENTITY Ctr_nbcompact		"Redukovat výšku navigační lišty">
 <!ENTITY Ctr_hide_bf_popup	"Skrýt nabídku historie tlačítek při kliknutí myší">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování (předvolba about:config)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Umístění menu">
 <!ENTITY Ctr_extrabar		"Přídavné lišty">
