--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Fleksibelt mellemrum">
 <!ENTITY Ctr_space			"Mellemrum">
 <!ENTITY Ctr_separator		"Separator">
-<!ENTITY Ctr_puibseparator	"Separator (til hovedpanelmenu-knap)">
 <!ENTITY Ctr_navthrobber	"Aktivitetsindikator">
 <!ENTITY Ctr_sidebarbutton	"(Sidepanel)">
 <!ENTITY Ctr_windowcontrols	"Minimere/maksimere/luk (Fuldskærm)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Brugerfladen generelt">
 <!ENTITY Ctr_nbiconsize0	"Navigationslinje attribut 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Små knapper på navigationslinjen">
-<!ENTITY Ctr_bfurlbarfix	"Ret adresselinje border-radius">
 <!ENTITY Ctr_backforward	"Flytbare tilbage/frem-knapper">
 <!ENTITY Ctr_nbcompact		"Reducér navigationslinjernes højde">
 <!ENTITY Ctr_hide_bf_popup	"Skjul knapperne historik popupmenu når der trykkes på musen">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
 <!ENTITY Ctr_extrabar		"Yderligere værktøjslinjer">
