--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Flexibler Zwischenraum">
 <!ENTITY Ctr_space			"Zwischenraum">
 <!ENTITY Ctr_separator		"Trennlinie">
-<!ENTITY Ctr_puibseparator	"Trennlinie für die Menüschaltfläche">
 <!ENTITY Ctr_navthrobber	"Aktivitätsanzeige">
 <!ENTITY Ctr_sidebarbutton	"Seitenleiste">
 <!ENTITY Ctr_windowcontrols	"Kontrollelemente (Vollbild)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Oberfläche">
 <!ENTITY Ctr_nbiconsize0	"Attribut für Symbolgröße: 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Kleine Schaltflächen auf der Navigations-Symbolleiste">
-<!ENTITY Ctr_bfurlbarfix 	"Radius der Adressleistenränder korrigieren">
 <!ENTITY Ctr_backforward	"Verschiebbare Zurück-Vor-Schaltfläche">
 <!ENTITY Ctr_nbcompact		"Höhe der Navigations-Symbolleiste reduzieren">
 <!ENTITY Ctr_hide_bf_popup	"Chronik-Aufklappmenü bei gedrückter Maustaste verstecken">
@@ -258,13 +256,14 @@
 <!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;'-Symbol für gültige 'about:'-Seiten">
 <!ENTITY Ctr_icopageinfo	"Globus-/Lesezeichen-/'i'-Symbol: 'Seiteninfo'-Fenster per Klick öffnen">
-<!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
+<!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für Adressleiste und Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
 <!ENTITY Ctr_autocomplete	"Autovervollständigungs-Pop-up">
 <!ENTITY Ctr_altautocompl	"Alternative Darstellung (experimentell)">
 <!ENTITY Ctr_urlbar_uc		"'Vereinigte Autovervollständigung' deaktivieren (about:config-Einstellung)">
 <!ENTITY Ctr_lbsugresi		"Höhenlimit deaktivieren">
 <!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge (about:config-Einstellung)">
+<!ENTITY Ctr_lbsbradius		"Benutzerdefinierte Krümmung für Adressleisten- und Suchleistenränder">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
 <!ENTITY Ctr_extrabar		"Extraleisten">
