--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Fleksibelny mjazyrum">
 <!ENTITY Ctr_space			"Mjazyrum">
 <!ENTITY Ctr_separator		"Źěleńska smužka">
-<!ENTITY Ctr_puibseparator	"Źěleńska smužka za tłocašk głownego menija">
 <!ENTITY Ctr_navthrobber	"Pokazka aktiwity">
 <!ENTITY Ctr_sidebarbutton	"Bócnica">
 <!ENTITY Ctr_windowcontrols	"Min./maks./zacyniś (połna wobrazowka)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Wužywarski pówjerch">
 <!ENTITY Ctr_nbiconsize0	"Atribut nawigaciskeje rědki stajiś">
 <!ENTITY Ctr_smallnavbut	"Małe tłocaški na nawigaciskej rědce">
-<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za adresowe rědki pópšawiś">
 <!ENTITY Ctr_backforward	"Pśesuwajobny tłocašk Slědk-Doprědka">
 <!ENTITY Ctr_nbcompact		"Wusokosć nawigaciskich rědkow reducěrowaś">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'zjadnośone awotwudopołnjenje' znjemóžniś (nastajenje about:config)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Pśidatne symbolowe rědki">
