--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Flexible space">
 <!ENTITY Ctr_space			"Space">
 <!ENTITY Ctr_separator		"Separator">
-<!ENTITY Ctr_puibseparator	"Separator (for main panel menu button)">
 <!ENTITY Ctr_navthrobber	"Activity Indicator">
 <!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 <!ENTITY Ctr_windowcontrols	"Min/max/close (full screen)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"General UI">
 <!ENTITY Ctr_nbiconsize0	"Navigation toolbar attribute 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Small buttons on navigation toolbar">
-<!ENTITY Ctr_bfurlbarfix	"Fix location bars border-radius">
 <!ENTITY Ctr_backforward	"Movable back-forward buttons">
 <!ENTITY Ctr_nbcompact		"Reduce navigation toolbars height">
 <!ENTITY Ctr_hide_bf_popup	"Hide buttons history popup menu on mouse press">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Menu items position">
 <!ENTITY Ctr_extrabar		"Additional Toolbars">
