--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Espacio flexible">
 <!ENTITY Ctr_space			"Espacio">
 <!ENTITY Ctr_separator		"Separador">
-<!ENTITY Ctr_puibseparator	"Separador (para el botón triple-barra de menú de panel principal)">
 <!ENTITY Ctr_navthrobber	"Indicador de actividad">
 <!ENTITY Ctr_sidebarbutton	"(Barra lateral)">
 <!ENTITY Ctr_windowcontrols	"Min/Max/Cerrar (pantalla completa)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Interfaz general de usuario">
 <!ENTITY Ctr_nbiconsize0	"Atributo 'iconsize' (tamaño de iconos) en la barra de navegación">
 <!ENTITY Ctr_smallnavbut	"Botones pequeños en la barra de navegación">
-<!ENTITY Ctr_bfurlbarfix 	"Corregir radio del borde de las barras de direcciones">
 <!ENTITY Ctr_backforward	"Botones Anterior-Siguiente móviles">
 <!ENTITY Ctr_nbcompact		"Reducir altura de las barras de navegación">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú de historial de estos botones al pulsarlos con el ratón">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config >> browser.urlbar.maxRichResults)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Posición de los elementos del menú">
 <!ENTITY Ctr_extrabar		"Barras de herramientas adicionales">
