--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Muutuv tühimik">
 <!ENTITY Ctr_space			"Tühimik">
 <!ENTITY Ctr_separator		"Eraldaja">
-<!ENTITY Ctr_puibseparator	"Eraldaja (paneelimenüü jaoks)">
 <!ENTITY Ctr_navthrobber	"Aktiivsuse näidik">
 <!ENTITY Ctr_sidebarbutton	"(Külgriba)">
 <!ENTITY Ctr_windowcontrols	"Min/max/sulge (Täisekraan)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Kasutajaliides: üldised sätted">
 <!ENTITY Ctr_nbiconsize0	"Aadressiriba atribuut 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Väiksed nupud aadressiribal">
-<!ENTITY Ctr_bfurlbarfix	"Paranda aadressiriba piirjoonte raadiust">
 <!ENTITY Ctr_backforward	"Liigutatavad tagasi-edasi nupud">
 <!ENTITY Ctr_nbcompact		"Vähenda aadressiriba kõrgust">
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv (about:config eelistus)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
