--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Flexibelna mjezera">
 <!ENTITY Ctr_space			"Mjezera">
 <!ENTITY Ctr_separator		"Dźělatko">
-<!ENTITY Ctr_puibseparator	"Dźělatko za tłóčatko hłowneho menija">
 <!ENTITY Ctr_navthrobber	"Wozjewjenje aktiwity">
 <!ENTITY Ctr_sidebarbutton	"Bočnica">
 <!ENTITY Ctr_windowcontrols	"Min./maks./začinić (połna wobrazowka)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Wužiwarski powjerch">
 <!ENTITY Ctr_nbiconsize0	"Atribut nawigaciskeje lajsty stajić">
 <!ENTITY Ctr_smallnavbut	"Małe tłóčatka na nawigaciskej lajsće">
-<!ENTITY Ctr_bfurlbarfix	"Ramikowy radius za adresowe lajsty porjedźić">
 <!ENTITY Ctr_backforward	"Přesuwajomne tłóčatko Wróćo-Doprědka">
 <!ENTITY Ctr_nbcompact		"Wysokosć nawigaciskich lajstow redukować">
 <!ENTITY Ctr_hide_bf_popup	"Meni historije přez tłóčenje tasty myše schować">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Pozicija menijowych zapiskow">
 <!ENTITY Ctr_extrabar		"Přidatne symbolowe lajsty">
