--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Spazio flessibile">
 <!ENTITY Ctr_space			"Spazio">
 <!ENTITY Ctr_separator		"Separatore">
-<!ENTITY Ctr_puibseparator	"Separatore (per il pannello del pulsante menu)">
 <!ENTITY Ctr_navthrobber	"Indicatore attività">
 <!ENTITY Ctr_sidebarbutton	"Barra laterale">
 <!ENTITY Ctr_windowcontrols	"Pulsanti controllo finestra (A tutto schermo)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Interfaccia base">
 <!ENTITY Ctr_nbiconsize0	"Imposta attributo alla barra di navigazione">
 <!ENTITY Ctr_smallnavbut	"Pulsanti piccoli nella barra di navigazione">
-<!ENTITY Ctr_bfurlbarfix	"Correggi la curvatura della barra degli indirizzi ">
 <!ENTITY Ctr_backforward	"Pulsanti Indietro/Avanti mobili">
 <!ENTITY Ctr_nbcompact		"Riduci l’altezza delle barre di navigazione">
 <!ENTITY Ctr_hide_bf_popup	"Nascondi la cronologia dei pulsanti Avanti/Indietro">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico (preferenza in about:config)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Posizione delle voci del menu">
 <!ENTITY Ctr_extrabar		"Barre degli strumenti aggiuntive">
