--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Espaço Flexível">
 <!ENTITY Ctr_space			"Espaço">
 <!ENTITY Ctr_separator		"Separador">
-<!ENTITY Ctr_puibseparator	"Separador do Botão do Painel da Interface do Usuário">
 <!ENTITY Ctr_navthrobber	"Indicador de Atividade">
 <!ENTITY Ctr_sidebarbutton	"Barra Lateral">
 <!ENTITY Ctr_windowcontrols	"Mínimo/Máximo/Fechar (Tela Cheia)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Interface do Usuário Geral">
 <!ENTITY Ctr_nbiconsize0	"Definir os Atributos da Barra de Navegação">
 <!ENTITY Ctr_smallnavbut	"Botões Pequenos na Barra de Navegação">
-<!ENTITY Ctr_bfurlbarfix	"Corrigir a Borda-Alcance das Barras de URLs">
 <!ENTITY Ctr_backforward	"Botão Móvel Voltar-Avançar">
 <!ENTITY Ctr_nbcompact		"Reduzir a Altura das Barras de Ferramentas de Navegação">
 <!ENTITY Ctr_hide_bf_popup	"Ocultar o Menu Histórico ao Pressionar o Mouse">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Posição dos Ítens do Menu">
 <!ENTITY Ctr_extrabar		"Barras de Ferramentas Adicionais">
