--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Prilagodljiv prostor">
 <!ENTITY Ctr_space			"Prostor">
 <!ENTITY Ctr_separator		"Ločilo">
-<!ENTITY Ctr_puibseparator	"Ločilo (za ploščasti meni)">
 <!ENTITY Ctr_navthrobber	"Kazalnik dejavnosti">
 <!ENTITY Ctr_sidebarbutton	"(stranska vrstica)">
 <!ENTITY Ctr_windowcontrols	"Skrči/Razpni/Zapri (celozaslonski način)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Splošen up.vmesnik">
 <!ENTITY Ctr_nbiconsize0	"Atribut orodne vrstice za krmarjenje 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Majhni gumbi na orodni vrstici za krmarjenje">
-<!ENTITY Ctr_bfurlbarfix	"Pritrdi polmer obrobe naslovne vrstice">
 <!ENTITY Ctr_backforward	"Premakljiva gumba Nazaj/Naprej">
 <!ENTITY Ctr_nbcompact		"Zmanjšaj višino orodne vrstice za krmarjenje">
 <!ENTITY Ctr_hide_bf_popup	"Skrij gumbov pojavni meni zgodovine ob kliku miške">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja' (možnost about:config)">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
 <!ENTITY Ctr_lbsugres		"Število rezultatov (možnost about:config)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
 <!ENTITY Ctr_extrabar		"Dodatne orodne vrstice">
