--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Esnek Boşluk">
 <!ENTITY Ctr_space			"Boşluk">
 <!ENTITY Ctr_separator		"Ayraç">
-<!ENTITY Ctr_puibseparator	"Panel arayüzü ayraç butonu">
 <!ENTITY Ctr_navthrobber	"Etkinlik Göstergesi">
 <!ENTITY Ctr_sidebarbutton	"(Kenar Çubuğu)">
 <!ENTITY Ctr_windowcontrols	"Min/max/kapat (Tam ekran)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Genel Arayüz">
 <!ENTITY Ctr_nbiconsize0	"Gezinti çubuğu niteliklerini ayarla:">
 <!ENTITY Ctr_smallnavbut	"Gezinti çubuğunda küçük butonlar">
-<!ENTITY Ctr_bfurlbarfix	"URL çubuğu çapını ve sınırlarını düzelt">
 <!ENTITY Ctr_backforward	"Hareketli İleri-Geri butonları">
 <!ENTITY Ctr_nbcompact		"Gezinti araç çubuğu yüksekliğini azalt">
 <!ENTITY Ctr_hide_bf_popup	"Geçmiş menüsü butonunu gizlemek için Fare tuşuna basın">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Menu öge pozisyonu">
 <!ENTITY Ctr_extrabar		"Ek Araç Çubuğu">
