--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"Гнучкий інтервал">
 <!ENTITY Ctr_space			"Інтервал">
 <!ENTITY Ctr_separator		"Розділювач">
-<!ENTITY Ctr_puibseparator	"Розділювач кнопок UI панелі">
 <!ENTITY Ctr_navthrobber	"Індикатор активності">
 <!ENTITY Ctr_sidebarbutton	"Бокова панель">
 <!ENTITY Ctr_windowcontrols	"мін/макс/закрити (Повний екран)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"Основний інтерфейс">
 <!ENTITY Ctr_nbiconsize0	"Встановити атрибути панелі навігації">
 <!ENTITY Ctr_smallnavbut	"Малі кнопки на панелі навігації">
-<!ENTITY Ctr_bfurlbarfix	"Зміна радіусу кутів рядку адреси">
 <!ENTITY Ctr_backforward	"Рухома назад-вперед кнопка">
 <!ENTITY Ctr_nbcompact		"Зменшити висоту панелі навігації">
 <!ENTITY Ctr_hide_bf_popup	"Приховати меню історії при натисканні миші">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення» (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"Позиція пунктів меню">
 <!ENTITY Ctr_extrabar		"Додаткові панелі інструментів">
