--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"可伸缩空白">
 <!ENTITY Ctr_space			"空白">
 <!ENTITY Ctr_separator		"分隔符">
-<!ENTITY Ctr_puibseparator	"面板按钮分隔符">
 <!ENTITY Ctr_navthrobber	"活动指示器">
 <!ENTITY Ctr_sidebarbutton	"侧边栏">
 <!ENTITY Ctr_windowcontrols	"最小化/最大化/关闭 (全屏)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"常规界面">
 <!ENTITY Ctr_nbiconsize0	"导航工具栏“iconsize”属性">
 <!ENTITY Ctr_smallnavbut	"在导航工具栏上使用小图标">
-<!ENTITY Ctr_bfurlbarfix	"修复地址栏圆弧半径">
 <!ENTITY Ctr_backforward	"使「后退」按钮可以移动">
 <!ENTITY Ctr_nbcompact		"降低导航工具栏高度">
 <!ENTITY Ctr_hide_bf_popup	"鼠标按下时隐藏历史菜单">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能 (about:config 选项)">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_lbsugres		"结果数量 (about:config 选项)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"菜单项目位置">
 <!ENTITY Ctr_extrabar		"附加工具栏">
