--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -10,7 +10,6 @@
 <!ENTITY Ctr_flexspace		"彈性空間">
 <!ENTITY Ctr_space			"空白">
 <!ENTITY Ctr_separator		"分隔線">
-<!ENTITY Ctr_puibseparator	"面板按鈕分隔線">
 <!ENTITY Ctr_navthrobber	"進度指示器">
 <!ENTITY Ctr_sidebarbutton	"側邊欄">
 <!ENTITY Ctr_windowcontrols	"最小化/最大化/關閉 (全螢幕)">
@@ -112,7 +111,6 @@
 <!ENTITY Ctr_ui				"介面">
 <!ENTITY Ctr_nbiconsize0	"設定瀏覽工具列屬性">
 <!ENTITY Ctr_smallnavbut	"在瀏覽工具列使用小圖示按鈕">
-<!ENTITY Ctr_bfurlbarfix	"當「回到上一頁按鈕可移動」和「小圖示按鈕」模式下，修正網址列圓角半徑">
 <!ENTITY Ctr_backforward	"使「回到上一頁按鈕」可移動">
 <!ENTITY Ctr_nbcompact		"減少瀏覽工具列高度">
 <!ENTITY Ctr_hide_bf_popup	"當滑鼠長按時，不顯示分頁歷史瀏覽選單">
@@ -265,6 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature (about:config preference)">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results (about:config » browser.urlbar.maxRichResults)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"選單列併入">
 <!ENTITY Ctr_extrabar		"新增工具列">
