--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -10,10 +10,9 @@
 <!ENTITY Ctr_flexspace		"フレキシブルスペース">
 <!ENTITY Ctr_space			"スペース">
 <!ENTITY Ctr_separator		"セパレータ">
-<!ENTITY Ctr_puibseparator	"パネル UI ボタンセパレータ">
 <!ENTITY Ctr_navthrobber	"アクティビティインジケータ">
 <!ENTITY Ctr_sidebarbutton	"サイドバー">
-<!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (Fullscreen)">
+<!ENTITY Ctr_windowcontrols	"最小/最大/閉じる (フルスクリーン)">
 <!ENTITY Ctr_rr				"要 &brandShortName; 再起動">
 <!ENTITY Ctr_window			"ウィンドウ">
 
@@ -28,9 +27,9 @@
 
 <!ENTITY Ctr_tnot			"(タブを上にする)">
 
-<!ENTITY Ctr_tabcolors_t	"タブ色 &amp; テキスト">
+<!ENTITY Ctr_tabcolors_t	"タブの配色">
 
-<!ENTITY Ctr_tabs			"タブ">
+<!ENTITY Ctr_tabs			"タブバー">
 <!ENTITY Ctr_tabs0			"&brandShortName; デフォルト (丸いタブ)">
 <!ENTITY Ctr_tabs1			"四角いタブ (クラシック)">
 <!ENTITY Ctr_tabs1m			"四角いタブ (Australis化)">
@@ -67,13 +66,13 @@
 <!ENTITY Ctr_closetab_3		"ツールバーの後ろに表示">
 <!ENTITY Ctr_closetab_4		"ツールバーの先頭に表示">
 <!ENTITY Ctr_closetab_5		"全てのタブ (強制)">
-<!ENTITY Ctr_closetab_hfot	"タブが1つの時はボタンを隠す">
+<!ENTITY Ctr_closetab_hfot	"タブがひとつの時はボタンを隠す">
 <!ENTITY Ctr_closei_def		"デフォルトボタン">
 <!ENTITY Ctr_closeonleft	"タブタイトルの前に表示">
 <!ENTITY Ctr_closetabbig	"大きなボタン (20x20 px)">
-<!ENTITY Ctr_close_wwltab	"タブが1つの時はウィンドウを閉じる (about:config設定)">
+<!ENTITY Ctr_close_wwltab	"タブがひとつの時はタブと同時にウィンドウを閉じる (about:config設定)">
 
-<!ENTITY Ctr_hctpinfotab	"いくつかのタブのバリエーションは Hide Caption Titlebar Plus とは互換性がありません。">
+<!ENTITY Ctr_hctpinfotab	"いくつかの種類のタブは Hide Caption Titlebar Plus とは互換性がありません。">
 <!ENTITY Ctr_hctpinfoab		"タイトルバー上のボタンは Hide Caption Titlebar Plus に対応していません。">
 
 <!ENTITY Ctr_appbutton		"アプリケーションボタン">
@@ -85,7 +84,7 @@
 <!ENTITY Ctr_appbutton2io	"&brandShortName; タイトルバーに表示 (アイコンのみ)">
 <!ENTITY Ctr_paneluibtweak	"メニューボタンとして &brandShortName; ボタンを表示する…">
 <!ENTITY Ctr_paneluibtweak2	"メニューボタンとして &brandShortName; ボタン (アイコンのみ) を表示する…">
-<!ENTITY Ctr_paneluibtweak3	"…タブツールバー上にある時のみ">
+<!ENTITY Ctr_paneluibtweak3	"…タブバー上にある時のみ">
 <!ENTITY Ctr_appbuttonc_o	"橙色 (デフォルト)">
 <!ENTITY Ctr_appbuttonc_a	"青色 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黒色 (Nightly)">
@@ -97,54 +96,53 @@
 <!ENTITY Ctr_appbuttonc_pu	"紫色">
 <!ENTITY Ctr_appbuttonc_wh	"白色">
 <!ENTITY Ctr_appbuttonc_cu	"任意の色">
-<!ENTITY Ctr_appbuttonct	"ツールバー上のボタンのカスタム色">
+<!ENTITY Ctr_appbuttonct	"ツールバー上のボタンの任意の色">
 <!ENTITY Ctr_appbuttonI1	"再起動を推奨">
 <!ENTITY Ctr_appbuttonI1e	"WindowsのOSタイトルバーには表示されません。&brandShortName;タイトルバー上のみです。">
-<!ENTITY Ctr_appbuttonI2	"ボタン色はタイトルバーとタブツールバーのみに表示されます。">
-<!ENTITY Ctr_appbutmhi		"高い位置に表示 (タブツールバーに表示した時のみ)">
+<!ENTITY Ctr_appbuttonI2	"ボタンの色はタイトルバーとタブバーのみで表示されます。">
+<!ENTITY Ctr_appbutmhi		"高い位置に表示 (タブバーに表示した時のみ)">
 <!ENTITY Ctr_appbautocol	"自動的に色を変更する (デフォルト / Aurora / Nightly)">
-<!ENTITY Ctr_appbutbdl		"ボーダーと背景色を隠す">
+<!ENTITY Ctr_appbutbdl		"枠線と背景色を隠す">
 <!ENTITY Ctr_dblclclosefx	"ダブルクリックで現在のウィンドウを閉じる">
 <!ENTITY Ctr_appbclmmenus	"ボタンメニュー内をクリッカブルメニューにする (新しいタブ、印刷など)">
 <!ENTITY Ctr_appbutonclab	"タイトル">
-<!ENTITY Ctr_appbutonclab2	"タイトルを入力するか、空欄のままにしてください">
+<!ENTITY Ctr_appbutonclab2	"アプリケーションボタンのタイトルを入力するか、空欄のままにしてください">
 
-<!ENTITY Ctr_ui				"UI 一般">
-<!ENTITY Ctr_nbiconsize0	"ナビゲーションツールバー属性の設定">
+<!ENTITY Ctr_ui				"インターフェース一般">
+<!ENTITY Ctr_nbiconsize0	"ナビゲーションツールバーのアイコンの属性">
 <!ENTITY Ctr_smallnavbut	"ナビゲーションツールバーのボタンを小さくする">
-<!ENTITY Ctr_bfurlbarfix	"ロケーションバーの border-radius を修正する">
 <!ENTITY Ctr_backforward	"戻る-進むボタンを移動可能にする">
 <!ENTITY Ctr_nbcompact		"ナビゲーションツールバーの高さを下げる">
 <!ENTITY Ctr_hide_bf_popup	"マウスを押す時に履歴メニューを隠す">
 <!ENTITY Ctr_bf_space		"ボタン間のスペースを減らす (可能であれば)">
-<!ENTITY Ctr_noconicons		"ラベル(戻る、進む、停止、ブックマーク)をもつページコンテキストメニューアイコンを置換する">
+<!ENTITY Ctr_noconicons		"ページの右クリックメニュー：アイコン(戻る、進む、停止、ブックマーク)をメニュー項目で置換する">
 <!ENTITY Ctr_prefpage		"オプションページ・ウィンドウ">
 <!ENTITY Ctr_altoptionsd	"デフォルトの外観">
 <!ENTITY Ctr_altoptionsp	"替わりの外観で置き換える">
 <!ENTITY Ctr_altoptionsw	"オプションページをウィンドウで表示">
 <!ENTITY Ctr_altoptionsww	"幅:">
 <!ENTITY Ctr_altoptionswh	"高さ:">
-<!ENTITY Ctr_altoptionsi	"シミュレートされたオプションウィンドウは、すべてのツールバーが隠されたブラウザ・ウィンドウであり、ダイアログではありません。この場合、「現在のページを使用」機能は、現在のウィンドウのURL(about:preferences)を追加します。オプションツールバーボタンは、ウィンドウにオプションを開くことができるように、新しいものに置き換えられます。">
+<!ENTITY Ctr_altoptionsi	"オプションウィンドウは、すべてのツールバーが隠されたブラウザウィンドウであり、ダイアログではありません。このウィンドウを開いて「現在のページを使用」機能を使用すると、オプションウィンドウのURL(about:preferences)が追加されます。オプションツールバーボタンは、オプションウィンドウを開けるように新しいものに置き換えられます。">
 <!ENTITY Ctr_options_rem	"最後に開いたカテゴリを記憶する">
 <!ENTITY Ctr_svgfilters		"デフォルトのツールバーボタンのアイコンを SVG カラーにする">
-<!ENTITY Ctr_wincontrols	"フルスクリーンウィンドウ制御を移動可能にする">
-<!ENTITY Ctr_html5warning	"HTML5 フルスクリーン警告">
+<!ENTITY Ctr_wincontrols	"フルスクリーン用ウィンドウ制御ボタンを移動可能にする">
+<!ENTITY Ctr_html5warning	"HTML5 フルスクリーン警告を表示する">
 <!ENTITY Ctr_oldtoplevimg	"トップレベルドメインイメージ: 古い外観で置き換える">
-<!ENTITY Ctr_altalertbox	"'Alert box': 替わりの外観で置き換える">
+<!ENTITY Ctr_altalertbox	"ダイアログ: 替わりの外観で置き換える">
 <!ENTITY Ctr_emptygfavico	"空ファビコンを置き換える">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
 <!ENTITY Ctr_mstatusbars4e	"ステータスバーパネルは Status-4-Evar で制御されます。">
 <!ENTITY Ctr_mstatusbartpp	"ステータスバーパネルは ThePuzzlePiece で制御されます。">
 <!ENTITY Ctr_mstatusbarpzt	"ステータスバーパネルは Puzzle Toolbars で制御されます。">
 <!ENTITY Ctr_mstatusbarabr	"ステータスバーパネルは The Addon Bar (Restored) で制御されます。">
-<!ENTITY Ctr_combrelstop	"中止&amp;再読み込みボタンを組み合わせる">
-<!ENTITY Ctr_stoprel1		"重要：停止ボタンの後に再読み込みボタンを設置します">
-<!ENTITY Ctr_panelmenucol	"パネルメニューを別の背景色にする">
+<!ENTITY Ctr_combrelstop	"中止ボタンと再読み込みボタンを組み合わせる">
+<!ENTITY Ctr_stoprel1		"重要：停止ボタンの後ろに再読み込みボタンを設置します">
+<!ENTITY Ctr_panelmenucol	"メニューボタンパネル：背景色を変える">
 <!ENTITY Ctr_hideprivmask	"プライベートブラウジング: マスク表示を隠す">
 <!ENTITY Ctr_navsmallicons	"小さなアイコン">
 <!ENTITY Ctr_navlargeicons	"大きなアイコン">
 <!ENTITY Ctr_nbisizedelay0	"ブラウザの起動時に初期化を遅延する">
-<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay	"㍉秒 (1 秒 ＝ 1000 ㍉秒)">
 <!ENTITY Ctr_findbar		"検索バー">
 <!ENTITY Ctr_findbar_def	"デフォルト位置">
 <!ENTITY Ctr_findbar_top	"上に表示">
@@ -156,15 +154,15 @@
 <!ENTITY Ctr_nav_txt_ico3	"テキストのみを表示">
 <!ENTITY Ctr_nav_txt_exp	"古い属性 (実験的):">
 <!ENTITY Ctr_iat_notf_vt	"垂直ツールバーを除外する">
-<!ENTITY Ctr_cpanelmenus	"パネルメニュー：コンパクトビュー (ブックマーク、履歴など)">
-<!ENTITY Ctr_hidezoomres	"ツールバーのズームコントロール: ズームリセットボタンを隠す">
+<!ENTITY Ctr_cpanelmenus	"メニューボタンパネル：コンパクトビュー (ブックマーク、履歴など)">
+<!ENTITY Ctr_hidezoomres	"ツールバー上の拡大縮小ボタン: 拡大縮小リセットボタンを隠す">
 <!ENTITY Ctr_alt_newtabp	"新しいタブ (about:newtab): 替わりの外観で置き換える">
 <!ENTITY Ctr_nosnippets		"スタートページ (about:home): スニペットを隠す">
 <!ENTITY Ctr_search_ui		"検索">
-<!ENTITY Ctr_ctroldsearch	"古い検索">
+<!ENTITY Ctr_ctroldsearch	"古い検索スタイル">
 <!ENTITY Ctr_ctroldsearchc	"検索後に検索ボックスを消去する">
-<!ENTITY Ctr_search_oit		"新しいタブで Open search を開く (about:config設定)">
-<!ENTITY Ctr_osearch_meoit	"中クリック: 新しいフォアグラウンドタブで検索">
+<!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config設定)">
+<!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
 <!ENTITY Ctr_osearch_dm		"小さなドロップダウンマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
@@ -173,32 +171,32 @@
 <!ENTITY Ctr_am_nowarning	"アドオンリスト: 警告を隠す">
 <!ENTITY Ctr_am_compact		"アドオンリスト: コンパクトビュー">
 <!ENTITY Ctr_am_compact2	"コンパクトビュー＋">
-<!ENTITY Ctr_am_highlight	"アドオンリスト: カーソルが乗っているときハイライトする">
+<!ENTITY Ctr_am_highlight	"アドオンリスト: カーソルを乗せた時ハイライトする">
 <!ENTITY Ctr_am_buticons	"アドオンリスト: ボタンをアイコンに置き換える">
-<!ENTITY Ctr_am_hovshowb	"アドオンリスト: カーソルが乗っているときボタンを表示する">
+<!ENTITY Ctr_am_hovshowb	"アドオンリスト: カーソルを乗せた時ボタンを表示する">
 <!ENTITY Ctr_addonversion	"アドオンリスト: アドオンのバージョンを表示する">
 <!ENTITY Ctr_xpinstallui	"古いアドオンインストールウィンドウ (about:config設定)">
 <!ENTITY Ctr_bmbutton		"ブックマークメニューボタン">
 <!ENTITY Ctr_hiderecentbm	"ブックマークポップアップ: 「最近ブックマークしたページ」を隠す">
 <!ENTITY Ctr_hideeditbm		"ブックマークスター: ポップアップを隠す (ページがブックマークされていない場合)">
-<!ENTITY Ctr_bmbutpanelm	"ポップアップ: パネルメニューの外観">
+<!ENTITY Ctr_bmbutpanelm	"ポップアップ: パネルメニューで表示する">
 <!ENTITY Ctr_bmbunsortbm	"ポップアップ: 未整理のブックマークをメニューとして表示">
 <!ENTITY Ctr_bmbunsortbm2	"メニュー上部に表示">
 <!ENTITY Ctr_bmbviewbmsb	"ポップアップ: 「ブックマークサイドバーを表示」をメニューに表示">
 <!ENTITY Ctr_bmbviewbmtb	"ポップアップ: 「ブックマークツールバーを表示」をメニューに表示">
 <!ENTITY Ctr_bmbnounsort	"ポップアップ: 「未整理のブックマーク」を隠す">
-<!ENTITY Ctr_bmbutnotext	"ブックマークツールバーのラベルを隠す">
+<!ENTITY Ctr_bmbutnotext	"ブックマークツールバーのテキストを隠す">
 <!ENTITY Ctr_skipprintpr	"印刷ボタン: 印刷プレビューをスキップ">
 <!ENTITY Ctr_tbconmenu		"ツールバーの右クリック：メニューに移動、ツールバーから削除、全てのタブを再読、閉じたタブを元に戻すのメニューを表示しない">
 <!ENTITY Ctr_noresizerxp	"リサイズボックスを隠す (Windows XP)">
-<!ENTITY Ctr_extraurlkeycb	"追加のロケーションバー (Cmd/Ctrl+">
-<!ENTITY Ctr_pmhidelabels	"パネルメニューポップアップ：ボタンのラベルを隠す">
+<!ENTITY Ctr_extraurlkeycb	"ロケーションバーを追加する (Cmd/Ctrl+">
+<!ENTITY Ctr_pmhidelabels	"メニューボタンパネル：ボタンのテキストを隠す">
 <!ENTITY Ctr_menupopupscr	"メニューポップアップ: 矢印の代わりにスクロールバーを表示する">
 <!ENTITY Ctr_closegeneral	"その他の閉じるボタン">
 
 <!ENTITY Ctr_tabsep_def		"デフォルトのタブセパレーター">
 <!ENTITY Ctr_fxmockup		"&brandShortName; モックアップ">
-<!ENTITY Ctr_tabmokcolor	"タブボタンを白色にする (閉じる、新しいタブを開く、タブグループ、タブを一覧表示)">
+<!ENTITY Ctr_tabmokcolor	"タブのボタンを白色にする (閉じる、新しいタブを開く、タブグループ、タブを一覧表示)">
 <!ENTITY Ctr_tabmokcolor2	"非アクティブタブを白色の文字にして、灰色の影をつける">
 <!ENTITY Ctr_tabmokcolor4	"空ファビコンを白色にする">
 
@@ -207,7 +205,7 @@
 <!ENTITY Ctr_anewtaburl		"新しいタブの URL">
 <!ENTITY Ctr_anewtaburlcb	"新しいタブを以下の URL で開く (デフォルト値: about:newtab)">
 
-<!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、rgb(a)、hsl(a) の値をサポートします。">
+<!ENTITY Ctr_tab_tf_info1	"色名、16 進コード、RGB(A)、HSL(A) の値をサポートします。">
 <!ENTITY Ctr_tab_tf_info2	"入力値は検証されません。">
 <!ENTITY Ctr_tabact_t		"アクティブ">
 <!ENTITY Ctr_tabhov_t		"hover">
@@ -227,31 +225,31 @@
 <!ENTITY Ctr_ntabhov		"新しいタブ (hover)">
 <!ENTITY Ctr_bold			"太字">
 <!ENTITY Ctr_italic			"斜体">
-<!ENTITY Ctr_notabhov		"hovere の設定を上書きする">
+<!ENTITY Ctr_notabhov		"hover の設定を上書きする">
 <!ENTITY Ctr_tabc_act_tb	"ツールバーに背景色をつける">
 
 <!ENTITY Ctr_urlbar			"ロケーションバー">
-<!ENTITY Ctr_starinurl		"ロケーションバーにスターボタンを表示する">
-<!ENTITY Ctr_starinurlinfo	"デフォルトのブックマークメニューボタンが隠れてます">
-<!ENTITY Ctr_feedinurl		"ロケーションバーにフィードボタンを表示する">
-<!ENTITY Ctr_hideurelstop	"ロケーションバーの中止&amp;再読み込みボタンを隠す">
+<!ENTITY Ctr_starinurl		"スターボタンを表示する">
+<!ENTITY Ctr_starinurlinfo	"デフォルトのブックマークメニューボタンが隠れます">
+<!ENTITY Ctr_feedinurl		"フィードボタンを表示する">
+<!ENTITY Ctr_hideurelstop	"中止＆再読み込みボタンを隠す">
 <!ENTITY Ctr_hideurelstop2	"移動ボタンを常に表示">
 <!ENTITY Ctr_hideurlgo		"移動ボタンを隠す">
 <!ENTITY Ctr_hideurlsrg		"再読み込み＆中止＆移動ボタンのセパレーターとスペースを隠す">
 <!ENTITY Ctr_urlbardropm	"ドロップマーカーを後ろの可能な位置に移す">
 <!ENTITY Ctr_urlbardropm2	"ドロップマーカーを常に表示する">
-<!ENTITY Ctr_altreaderico	"リーダーアイコンを変更する">
+<!ENTITY Ctr_altreaderico	"替わりのリーダーアイコンで置き換える">
 <!ENTITY Ctr_hideprbutton	"ポップアップブロックの通知アイコンを隠す">
 <!ENTITY Ctr_locsearchbw10	"ロケーションバーと検索バーの高さを減らす (実験的)">
 <!ENTITY Ctr_urlbar_ib		"サイト認証ボタン (identity box)">
-<!ENTITY Ctr_ib_nohovcolor	"カーソルを置いた時グレーにしない">
+<!ENTITY Ctr_ib_nohovcolor	"カーソルを乗せた時に色を変えない">
 <!ENTITY Ctr_ib_graycolor	"Web サイトの識別情報を取得できない時はグレーで表示する">
 <!ENTITY Ctr_verifiedcolors	"審査済みのウェブサイト、安全な接続、安全でない接続でボタンの色を分ける">
 <!ENTITY Ctr_ibinfoico		"ｉアイコンを地球アイコンで置き換える">
 <!ENTITY Ctr_ibinfoico2		"ｉアイコンを隠す (可能ならば)">
 <!ENTITY Ctr_iblabels		"ラベルを隠す">
 <!ENTITY Ctr_faviconurl		"ロケーションバーにファビコンを表示する">
-<!ENTITY Ctr_padlock		"南京錠">
+<!ENTITY Ctr_padlock		"錠前アイコン">
 <!ENTITY Ctr_padlock_hid	"隠す">
 <!ENTITY Ctr_padlock_def	"デフォルト">
 <!ENTITY Ctr_padlock_cla	"クラシック">
@@ -260,21 +258,22 @@
 <!ENTITY Ctr_icopageinfo	"クリックした時ページ情報ウィンドウを開く">
 <!ENTITY Ctr_lbsbsize		"ロケーションバーと検索バーの横幅を指定する">
 <!ENTITY Ctr_searchbar		"検索バー">
-<!ENTITY Ctr_autocomplete	"自動補完候補">
+<!ENTITY Ctr_autocomplete	"自動補完候補のポップアップリスト">
 <!ENTITY Ctr_altautocompl	"替わりの自動補完候補で置き換える (実験的)">
 <!ENTITY Ctr_urlbar_uc		"自動補完機能を無効にする (about:config設定)">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_lbsugres		"候補の表示数 (about:config設定)">
+<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
 
 <!ENTITY Ctr_menubar_items	"メニュー項目の位置">
 <!ENTITY Ctr_extrabar		"追加のツールバー">
 <!ENTITY Ctr_extrabar0		"追加のツールバー">
 <!ENTITY Ctr_extrabar1		"追加のツールバー">
-<!ENTITY Ctr_extrabarinfo	"「タブ上部」と「タブ上部以外」では追加のツールバーの順序をランダムに切り替えます。設定の反映には&brandShortName; の再起動が必要です。">
+<!ENTITY Ctr_extrabarinfo	"「タブを上にする」と「タブを下にする」では追加のツールバーの順序はランダムに切り替わります。設定の反映には&brandShortName; の再起動が必要です。">
 
 <!ENTITY Ctr_invicons		"反転アイコン">
 <!ENTITY Ctr_menubar		"メニューバー">
-<!ENTITY Ctr_tabstoolbar	"タブツールバー">
+<!ENTITY Ctr_tabstoolbar	"タブバー">
 <!ENTITY Ctr_navbar			"ナビゲーションツールバー">
 <!ENTITY Ctr_bookbar		"ブックマークツールバー">
 <!ENTITY Ctr_notoolbar		"隠す (メニュー項目を表示しない)">
@@ -284,40 +283,40 @@
 
 <!ENTITY Ctr_toolbars		"ツールバー設定">
 <!ENTITY Ctr_dblclnewtab	" ダブルクリックで'新しい'タブを開く (browser.newtab.url を使用)">
-<!ENTITY Ctr_hidetbwot		"1つのタブでタブツールバーを隠す">
-<!ENTITY Ctr_hidetbwote		"起動時に非表示の遅延を減少させる">
-<!ENTITY Ctr_hidetbwote_i	"タブツールバーに不具合が発生する可能性があります。">
+<!ENTITY Ctr_hidetbwot		"タブがひとつの時はタブバーを隠す">
+<!ENTITY Ctr_hidetbwote		"起動時に非表示なるまでの遅延を減少させる">
+<!ENTITY Ctr_hidetbwote_i	"タブバーに不具合が発生する可能性があります。">
 <!ENTITY Ctr_hidetbwote2	"タイトルバーを維持する (タブが上部の時)">
 <!ENTITY Ctr_notabfog		"背景のぼかしを取り除く (Windows AeroGlass / Win8)">
 <!ENTITY Ctr_notabbg		"背景色を取り除く (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_hightabpos		"ツールバーの上の間隔を減らす (可能ならば)">
-<!ENTITY Ctr_alttabstb		"別の背景色にする">
-<!ENTITY Ctr_alttabstb2		"最大化した時 (タブを上部の時)">
+<!ENTITY Ctr_hightabpos		"ツールバーの上部の間隔を減らす (可能ならば)">
+<!ENTITY Ctr_alttabstb		"替わりの背景色にする">
+<!ENTITY Ctr_alttabstb2		"最大化した時 (タブが上部の時)">
 
-<!ENTITY Ctr_altmenubar		"背景色を加える (OS タイトルバー)">
-<!ENTITY Ctr_altmenubarpos	"別の位置">
+<!ENTITY Ctr_altmenubar		"背景色を加える (システムのタイトルバー)">
+<!ENTITY Ctr_altmenubarpos	"配置">
 <!ENTITY Ctr_altmenubarpos2	"&brandShortName;タイトルバーの下">
 <!ENTITY Ctr_menubarnofog	"背景色とぼかしを取り除く (Windows AeroGlass / Win8)">
 
-<!ENTITY Ctr_aerocolors		"メインツールバーとタブを Blue Aero カラーにする">
+<!ENTITY Ctr_aerocolors		"ツールバーとタブを Blue Aero カラーにする">
 <!ENTITY Ctr_transpttbw10	"タイトル/メニュー/タブ ツールバー: 背景色を取り除く">
-<!ENTITY Ctr_transpttbew10	"いくつかのOSテーマのための追加の微調整">
-<!ENTITY Ctr_transptcw10	"OSデフォルトのボタンを隠す (最小化/最大化/閉じる)">
-<!ENTITY Ctr_hidenavbar		"ナビゲーションツールバー：ツールバーを隠す">
+<!ENTITY Ctr_transpttbew10	"いくつかのシステムテーマのための追加の微調整">
+<!ENTITY Ctr_transptcw10	"システムデフォルトのボタンを隠す (最小化/最大化/閉じる)">
+<!ENTITY Ctr_hidenavbar		"ツールバーを隠す">
 <!ENTITY Ctr_navbarpad		"左右に余白を追加">
 <!ENTITY Ctr_navbarpad_l	"左:">
 <!ENTITY Ctr_navbarpad_r	"右:">
-<!ENTITY Ctr_nobookbarbg	"ブックマークツールバー: 背景色を取り除く">
-<!ENTITY Ctr_bookbarfs		"ブックマークツールバー: フルスクリーンモード中も表示する">
+<!ENTITY Ctr_nobookbarbg	"背景色を取り除く">
+<!ENTITY Ctr_bookbarfs		"フルスクリーンモード中も表示する">
 <!ENTITY Ctr_nonavbarbg		"背景色を取り除く">
-<!ENTITY Ctr_nonavbarbg1	"このアドオンの追加のツールバーや他のトップツールバーが影響を受けます。">
-<!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンのすべてのSlim Chromeツールバーが影響を受けます。">
-<!ENTITY Ctr_nonavborder	"ブックマークツールバー: ツールバーに上ボーダーを加える">
-<!ENTITY Ctr_nonavtbborder	"ツールバー: 上ボーダーを取り除く">
+<!ENTITY Ctr_nonavbarbg1	"このアドオンによる追加のツールバーや他のトップツールバーが影響を受けます。">
+<!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべてのSlim Chromeツールバーが影響を受けます。">
+<!ENTITY Ctr_nonavborder	"上に枠線を加える">
+<!ENTITY Ctr_nonavtbborder	"ツールバー: 枠線を取り除く">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
 <!ENTITY Ctr_notextshadow	"ツールバー: ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
-<!ENTITY Ctr_tbsep_winc		"トップツールバー: 追加のツールバーセパレーター">
+<!ENTITY Ctr_tbsep_winc		"ツールバー: 追加のツールバーセパレーター">
 
 <!ENTITY Ctr_closeabarbut	"アドオンバー: 閉じるボタンを隠す">
 <!ENTITY Ctr_highaddonsbar	"高さを増やす">
@@ -326,20 +325,20 @@
 
 <!ENTITY Ctr_animation		"アニメーション">
 <!ENTITY Ctr_tabthrobber	"デフォルトのロードイメージ">
-<!ENTITY Ctr_bmanimation	"ブックマーク時にアニメーションさせる">
-<!ENTITY Ctr_pananimation	"パネルを開く時にアニメーションさせる">
-<!ENTITY Ctr_tabanimation	"タブを閉じる/開く時にアニメーションさせる (about:config設定)">
-<!ENTITY Ctr_dlanimation	"'ダウンロード通知'時にアニメーションさせる (about:config設定)">
+<!ENTITY Ctr_bmanimation	"ブックマークする時にアニメーションする">
+<!ENTITY Ctr_pananimation	"パネルを開く時にアニメーションする">
+<!ENTITY Ctr_tabanimation	"タブを閉じる/開く時にアニメーションする (about:config設定)">
+<!ENTITY Ctr_dlanimation	"ダウンロード通知をアニメーションする (about:config設定)">
 <!ENTITY Ctr_fsanimation	"フルスクリーンアニメーション (about:config設定)">
 <!ENTITY Ctr_fsaduration	"HTML5コンテンツのフルスクリーンアニメーション (about:config設定)">
 
-<!ENTITY Ctr_toolsitem		"ツールメニューに項目を表示する">
-<!ENTITY Ctr_appmenuitem	"アプリボタンメニューに項目を表示する">
-<!ENTITY Ctr_contextitem	"ツールバーのメニュー項目のコンテキストメニュー">
-<!ENTITY Ctr_puictrbutton	"パネルメニューにボタンを追加する">
+<!ENTITY Ctr_toolsitem		"ツールメニューに表示する">
+<!ENTITY Ctr_appmenuitem	"アプリケーションボタンのメニューに表示する">
+<!ENTITY Ctr_contextitem	"ツールバーの右クリックメニューに表示する">
+<!ENTITY Ctr_puictrbutton	"メニューボタンパネルに表示する">
 
 <!ENTITY Ctr_otherctroptns	"その他の設定">
-<!ENTITY Ctr_cuibotbuttons	"'カスタマイズ'モードの追加ボタンを表示する">
+<!ENTITY Ctr_cuibotbuttons	"カスタマイズモードで追加ボタンを表示する">
 <!ENTITY Ctr_nodevtheme		"開発ツールを有効にされるのを防ぐ">
 
 <!ENTITY Ctr_experttweaks	"拡張設定">
@@ -372,7 +371,7 @@
 
 <!ENTITY Ctr_special_font	"背景色の設定はデフォルトテーマのみに適用されます。">
 <!ENTITY Ctr_special_info	"一部オプションは特定のケースでのみ動作します。">
-<!ENTITY Ctr_special_info2	"設定は&brandShortName; デフォルトテーマ用に作成されたもので、サードパーティのテーマで動作しないかもしれません。">
+<!ENTITY Ctr_special_info2	"設定は&brandShortName; デフォルトテーマ用に作成されたもので、サードパーティのテーマで動作しない可能性があります。">
 <!ENTITY Ctr_support		"サポートフォーラム (英語)">
 <!ENTITY Ctr_newversion		"新バージョンをチェック">
 
