--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -263,7 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja' (možnost about:config)">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
 <!ENTITY Ctr_lbsugres		"Število rezultatov (možnost about:config)">
-<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
+<!ENTITY Ctr_lbsbradius		"Polmer obrobe po meri naslovne in iskalne vrstice">
 
 <!ENTITY Ctr_menubar_items	"Položaj predmetov menija">
 <!ENTITY Ctr_extrabar		"Dodatne orodne vrstice">
