--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -126,7 +126,7 @@
 <!ENTITY Ctr_options_rem	"Запоминать последнюю выбранную категорию">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
 <!ENTITY Ctr_wincontrols	"Подвижное управление полноэкранным режимом">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_html5warning	"HTML5 предупреждение полноэкранного режима">
 <!ENTITY Ctr_oldtoplevimg	"Изображение «домена верхнего уровня»: классический вид">
 <!ENTITY Ctr_altalertbox	"«Окно предупреждений»: альтернативный вид">
 <!ENTITY Ctr_emptygfavico	"Заменять пустые фавиконки">
@@ -157,13 +157,13 @@
 <!ENTITY Ctr_cpanelmenus	"Компактная панель меню (закладки, история и т. д.)">
 <!ENTITY Ctr_hidezoomres	"Кнопки масштаба: скрыть сброс масштабирования">
 <!ENTITY Ctr_alt_newtabp	"Страница новой вкладки (about:newtab): альтернативный вид">
-<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_nosnippets		"Начальная страница (about:home): скрыть сниппеты">
+<!ENTITY Ctr_search_ui		"Поиск">
 <!ENTITY Ctr_ctroldsearch	"Старый поиск">
 <!ENTITY Ctr_ctroldsearchc	"Очистить форму после поиска">
 <!ENTITY Ctr_search_oit		"Открывать поиск в новой вкладке (настройка about:config)">
 <!ENTITY Ctr_osearch_meoit	"Средний-клик: поиск в новой активной вкладке">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
+<!ENTITY Ctr_osearch_iwidth	"Автонастройка ширины всплывающего меню">
 <!ENTITY Ctr_osearch_dm		"Маленький дропмаркер">
 <!ENTITY Ctr_addonmanager	"Управление дополнениями">
 <!ENTITY Ctr_alt_addonsp	"Страница дополнений «Подробнее»: альтернативный вид">
@@ -182,7 +182,7 @@
 <!ENTITY Ctr_bmbutpanelm	"Всплывающее меню: вид панели меню">
 <!ENTITY Ctr_bmbunsortbm	"Всплывающее меню: подменю «Неподшитые закладки»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
+<!ENTITY Ctr_bmbviewbmsb	"Всплывающее меню: «Показать боковую панель закладок»">
 <!ENTITY Ctr_bmbviewbmtb	"Всплывающее меню: «Показать панель закладок»">
 <!ENTITY Ctr_bmbnounsort	"Всплывающее меню: скрыть «Неподшитые закладки»">
 <!ENTITY Ctr_bmbutnotext	"Скрыть текст на панели закладок">
@@ -258,12 +258,12 @@
 <!ENTITY Ctr_icopageinfo	"Фавикон/глобус/«i»-значок: при нажатии открывает окно «Информация о странице»">
 <!ENTITY Ctr_lbsbsize		"Пользовательская ширина строки адреса и поиска">
 <!ENTITY Ctr_searchbar		"Панель поиска">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance (experimental)">
+<!ENTITY Ctr_autocomplete	"Автозаполнение">
+<!ENTITY Ctr_altautocompl	"Альтернативный внешний вид (экспериментально)">
 <!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение» (настройка about:config)">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results (about:config preference)">
-<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
+<!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
+<!ENTITY Ctr_lbsugres		"Количество результатов (настройка about:config)">
+<!ENTITY Ctr_lbsbradius		"Пользовательский радиус границы для строки адреса поиска">
 
 <!ENTITY Ctr_menubar_items	"Позиция пунктов меню">
 <!ENTITY Ctr_extrabar		"Дополнительные панели инструментов">
