--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -155,16 +155,16 @@
 <!ENTITY Ctr_nav_txt_exp	"古い属性 (実験的):">
 <!ENTITY Ctr_iat_notf_vt	"垂直ツールバーを除外する">
 <!ENTITY Ctr_cpanelmenus	"メニューボタンパネル：コンパクトビュー (ブックマーク、履歴など)">
-<!ENTITY Ctr_hidezoomres	"ツールバー上の拡大縮小ボタン: 拡大縮小リセットボタンを隠す">
-<!ENTITY Ctr_alt_newtabp	"新しいタブ (about:newtab): 替わりの外観で置き換える">
+<!ENTITY Ctr_hidezoomres	"ズームボタン: リセットボタンを隠す（ツールバー上にある時のみ）">
+<!ENTITY Ctr_alt_newtabp	"新しいタブページ (about:newtab): 替わりの外観で置き換える">
 <!ENTITY Ctr_nosnippets		"スタートページ (about:home): スニペットを隠す">
-<!ENTITY Ctr_search_ui		"検索">
+<!ENTITY Ctr_search_ui		"検索バー">
 <!ENTITY Ctr_ctroldsearch	"古い検索スタイル">
 <!ENTITY Ctr_ctroldsearchc	"検索後に検索ボックスを消去する">
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く (about:config設定)">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
-<!ENTITY Ctr_osearch_dm		"小さなドロップダウンマーカー">
+<!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
 <!ENTITY Ctr_addonmanager	"アドオンマネージャ">
 <!ENTITY Ctr_alt_addonsp	"詳細情報: 順序を変える">
 <!ENTITY Ctr_alt_addonsm	"替わりの外観で置き換える">
@@ -187,7 +187,7 @@
 <!ENTITY Ctr_bmbnounsort	"ポップアップ: 「未整理のブックマーク」を隠す">
 <!ENTITY Ctr_bmbutnotext	"ブックマークツールバーのテキストを隠す">
 <!ENTITY Ctr_skipprintpr	"印刷ボタン: 印刷プレビューをスキップ">
-<!ENTITY Ctr_tbconmenu		"ツールバーの右クリック：メニューに移動、ツールバーから削除、全てのタブを再読、閉じたタブを元に戻すのメニューを表示しない">
+<!ENTITY Ctr_tbconmenu		"ツールバーの右クリック：メニューに移動、ツールバーから削除、すべてのタブを再読み込み、閉じたタブを元に戻すのメニューを表示しない">
 <!ENTITY Ctr_noresizerxp	"リサイズボックスを隠す (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"ロケーションバーを追加する (Cmd/Ctrl+">
 <!ENTITY Ctr_pmhidelabels	"メニューボタンパネル：ボタンのテキストを隠す">
@@ -232,10 +232,10 @@
 <!ENTITY Ctr_starinurl		"スターボタンを表示する">
 <!ENTITY Ctr_starinurlinfo	"デフォルトのブックマークメニューボタンが隠れます">
 <!ENTITY Ctr_feedinurl		"フィードボタンを表示する">
-<!ENTITY Ctr_hideurelstop	"中止＆再読み込みボタンを隠す">
+<!ENTITY Ctr_hideurelstop	"中止・再読み込みボタンを隠す">
 <!ENTITY Ctr_hideurelstop2	"移動ボタンを常に表示">
 <!ENTITY Ctr_hideurlgo		"移動ボタンを隠す">
-<!ENTITY Ctr_hideurlsrg		"再読み込み＆中止＆移動ボタンのセパレーターとスペースを隠す">
+<!ENTITY Ctr_hideurlsrg		"中止・再読み込み・移動ボタンのセパレーターとスペースを隠す">
 <!ENTITY Ctr_urlbardropm	"ドロップマーカーを後ろの可能な位置に移す">
 <!ENTITY Ctr_urlbardropm2	"ドロップマーカーを常に表示する">
 <!ENTITY Ctr_altreaderico	"替わりのリーダーアイコンで置き換える">
@@ -263,7 +263,7 @@
 <!ENTITY Ctr_urlbar_uc		"自動補完機能を無効にする (about:config設定)">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_lbsugres		"候補の表示数 (about:config設定)">
-<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
+<!ENTITY Ctr_lbsbradius		"ロケーションバーと検索バーの 境界線半径 を修正する">
 
 <!ENTITY Ctr_menubar_items	"メニュー項目の位置">
 <!ENTITY Ctr_extrabar		"追加のツールバー">
@@ -281,8 +281,8 @@
 <!ENTITY Ctr_mbarforceleft	"先頭に表示">
 <!ENTITY Ctr_mbarforceright	"後ろに表示">
 
-<!ENTITY Ctr_toolbars		"ツールバー設定">
-<!ENTITY Ctr_dblclnewtab	" ダブルクリックで'新しい'タブを開く (browser.newtab.url を使用)">
+<!ENTITY Ctr_toolbars		"ツールバー">
+<!ENTITY Ctr_dblclnewtab	"ダブルクリックで新しいタブを開く (browser.newtab.url を使用)">
 <!ENTITY Ctr_hidetbwot		"タブがひとつの時はタブバーを隠す">
 <!ENTITY Ctr_hidetbwote		"起動時に非表示なるまでの遅延を減少させる">
 <!ENTITY Ctr_hidetbwote_i	"タブバーに不具合が発生する可能性があります。">
@@ -312,9 +312,9 @@
 <!ENTITY Ctr_nonavbarbg1	"このアドオンによる追加のツールバーや他のトップツールバーが影響を受けます。">
 <!ENTITY Ctr_nonavbarbg2	"Beyond Australis アドオンによるすべてのSlim Chromeツールバーが影響を受けます。">
 <!ENTITY Ctr_nonavborder	"上に枠線を加える">
-<!ENTITY Ctr_nonavtbborder	"ツールバー: 枠線を取り除く">
+<!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
-<!ENTITY Ctr_notextshadow	"ツールバー: ツールバーとタブのテキストの影を隠す">
+<!ENTITY Ctr_notextshadow	"ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
 <!ENTITY Ctr_tbsep_winc		"ツールバー: 追加のツールバーセパレーター">
 
@@ -333,12 +333,12 @@
 <!ENTITY Ctr_fsaduration	"HTML5コンテンツのフルスクリーンアニメーション (about:config設定)">
 
 <!ENTITY Ctr_toolsitem		"ツールメニューに表示する">
-<!ENTITY Ctr_appmenuitem	"アプリケーションボタンのメニューに表示する">
+<!ENTITY Ctr_appmenuitem	"&brandShortName;メニューに表示する">
 <!ENTITY Ctr_contextitem	"ツールバーの右クリックメニューに表示する">
 <!ENTITY Ctr_puictrbutton	"メニューボタンパネルに表示する">
 
 <!ENTITY Ctr_otherctroptns	"その他の設定">
-<!ENTITY Ctr_cuibotbuttons	"カスタマイズモードで追加ボタンを表示する">
+<!ENTITY Ctr_cuibotbuttons	"カスタマイズモードに追加のボタンを表示する">
 <!ENTITY Ctr_nodevtheme		"開発ツールを有効にされるのを防ぐ">
 
 <!ENTITY Ctr_experttweaks	"拡張設定">
