--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -122,7 +122,7 @@
 <!ENTITY Ctr_altoptionsw	"Ava sätete leht aknas">
 <!ENTITY Ctr_altoptionsww	"Laius">
 <!ENTITY Ctr_altoptionswh	"Kõrgus">
-<!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Nupp 'Sätted' tööriistaribal asendatakse uuega, et saaks sätted avada aknas.">
+<!ENTITY Ctr_altoptionsi	"Simuleeritud sätete aken ei ole enam dialoogiaken, vaid peidetud tööriistaribadega 'brauseri aken'. Säte 'Kasuta aktiivset veebilehte' lisab avalehtede hulka ainult aktiivses aknas avatud lehtede aadressid, mis on antud juhul ainult 'about:preferences'. Sätete nupp tööriistaribal asendatakse uuega, et sätteid saaks aknas avada.">
 <!ENTITY Ctr_options_rem	"Jäta meelde viimati valitud kategooria">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
 <!ENTITY Ctr_wincontrols	"Liigutatavad akna juhtelemendid täisekraani režiimis">
@@ -260,10 +260,10 @@
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus (katsejärgus)">
-<!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
+<!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete' (about:config eelistus)">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv (about:config eelistus)">
-<!ENTITY Ctr_lbsbradius		"Aadressiriba ja otsinguriba piirjoonte kohandatud raadius">
+<!ENTITY Ctr_lbsbradius		"Aadressiriba ja otsinguriba piirjoonte kohandatud ümarus">
 
 <!ENTITY Ctr_menubar_items	"Menüükirjete asukoht">
 <!ENTITY Ctr_extrabar		"Lisa-tööriistaribad">
@@ -381,9 +381,9 @@
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
 <!ENTITY Ctr_restartapp					"'Taaskäivita' &brandShortName;i nupu menüüs ja menüüs Fail">
 
-<!ENTITY Ctr_openInCurrentTab			"Open inputs in current tab">
-<!ENTITY Ctr_openInNewTab				"Open inputs in a new tab">
-<!ENTITY Ctr_openInNewWindow			"Open inputs in a new window">
+<!ENTITY Ctr_openInCurrentTab			"Ava sisestused praegusel kaardil">
+<!ENTITY Ctr_openInNewTab				"Ava sisestused uuel kaardil">
+<!ENTITY Ctr_openInNewWindow			"Ava sisestused uues aknas">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
