--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -381,9 +381,9 @@
 <!ENTITY Ctr_menu_restart.label			"Ponovno zaženi">
 <!ENTITY Ctr_restartapp					"'Ponovno zaženi' v programskem meniju in meniju Datoteka">
 
-<!ENTITY Ctr_openInCurrentTab			"Open inputs in current tab">
-<!ENTITY Ctr_openInNewTab				"Open inputs in a new tab">
-<!ENTITY Ctr_openInNewWindow			"Open inputs in a new window">
+<!ENTITY Ctr_openInCurrentTab			"Odpri vnose v trenutnem zavihku">
+<!ENTITY Ctr_openInNewTab				"Odpri vnose v novem zavihku">
+<!ENTITY Ctr_openInNewWindow			"Odpri vnose v novem oknu">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"N">
